--- a/src/app/modules/profile/profile.component.scss
+++ b/src/app/modules/profile/profile.component.scss
@@ -16,6 +16,11 @@
     margin-left: 20px;
     font-size: 25px;
   }
+
+  &-item__tag {
+    width: 100%;
+    font-size: 25px;
+  }
 }
 
 .follow-unfollow {
