--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -20,7 +20,7 @@
     <img
       class="img-profile"
       [matMenuTriggerFor]="menu"
-      src="{{ settingsService.userData.imageUrl }}"
+      src="{{ settingsService.userData.imageUrl || 'assets/profile.png' }}"
       alt="User Avatar"
     />
   </div>
