--- a/src/app/modules/profile/settings/settings.component.html
+++ b/src/app/modules/profile/settings/settings.component.html
@@ -1,5 +1,12 @@
 <div>
   <app-generic-card [title]="'Configuração'">
+    <input
+      style="margin-bottom: 15px;"
+      type="file"
+      (change)="fileChange($event)"
+      placeholder="Upload file"
+      accept=".pdf"
+    />
     <app-form
       #appForm
       [formConfig]="formConfig"
