--- a/src/app/shared/components/feed/feed.component.html
+++ b/src/app/shared/components/feed/feed.component.html
@@ -2,6 +2,8 @@
   <app-new-post (onHandlePostSubmit)="onHandlePostSubmit()"></app-new-post>
 </div>
 
+<app-follow-sugestion></app-follow-sugestion>
+
 <div
   class="container timeline-news"
   *ngIf="feedPostsWait.length > 0"
