--- a/src/app/shared/components/form/form.component.html
+++ b/src/app/shared/components/form/form.component.html
@@ -5,8 +5,20 @@
     <mat-label>{{ field.label }}</mat-label>
 
     <mat-select
+      (click)="field.click()"
       *ngIf="field.type === 'combobox'"
       formControlName="{{ field.name }}"
+    >
+      <mat-option *ngFor="let value of field.values" [value]="value.value">
+        {{ value.label }}
+      </mat-option>
+    </mat-select>
+
+    <mat-select
+      (click)="field.click()"
+      *ngIf="field.type === 'multicombobox'"
+      formControlName="{{ field.name }}"
+      multiple
     >
       <mat-option *ngFor="let value of field.values" [value]="value.value">
         {{ value.label }}
@@ -17,8 +29,26 @@
       *ngIf="field.type === 'textarea'"
       matInput
       formControlName="{{ field.name }}"
+      style="min-height: 250px;"
+      (click)="field.click()"
     >
     </textarea>
+
+    <input
+      *ngIf="field.type === 'date'"
+      matInput
+      [matDatepicker]="picker"
+      placeholder="Selecione uma data"
+      formControlName="{{ field.name }}"
+      (click)="field.click()"
+    />
+    <mat-datepicker-toggle
+      *ngIf="field.type === 'date'"
+      matSuffix
+      [for]="picker"
+      (click)="field.click()"
+    ></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
 
     <input
       *ngIf="
@@ -29,6 +59,7 @@
       matInput
       type="{{ field.type }}"
       formControlName="{{ field.name }}"
+      (click)="field.click()"
     />
 
     <mat-error *ngFor="let validator of field.validators">
