--- a/src/app/shared/components/follow-sugestion/follow-sugestion.component.scss
+++ b/src/app/shared/components/follow-sugestion/follow-sugestion.component.scss
@@ -16,10 +16,15 @@
     margin-bottom: 10px;
 
     .user-sugestion {
-      width: auto;
+      width: 20%;
       height: auto;
       margin-left: 5px;
       margin-right: 5px;
+      cursor: pointer;
+      justify-content: space-between;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
       &__avatar {
         img {
@@ -31,8 +36,8 @@
 }
 
 .img-profile2 {
-  width: 100%;
-  height: 150px;
+  width: 50px;
+  max-height: 50px;
   flex-shrink: 0;
   object-fit: cover;
 }
