--- a/src/app/modules/search/search.component.html
+++ b/src/app/modules/search/search.component.html
@@ -2,10 +2,11 @@
 
 <div class="text" *ngIf="users.length > 0">Filtro por {{ filter }}</div>
 
-<app-generic-card *ngFor="let user of users" routerLink="/{{ user.name }}">
+<app-generic-card *ngFor="let user of users" routerLink="/feed/{{ user.name }}">
   <div class="users-container">
     <img src="{{ user.imageUrl || 'assets/profile.png' }}" />
     <p class="name">{{ user.name }}</p>
+    <p class="name">Instituição: {{ user.instituicao }}</p>
   </div>
 </app-generic-card>
 
