--- a/src/app/shared/components/follow-sugestion/follow-sugestion.component.html
+++ b/src/app/shared/components/follow-sugestion/follow-sugestion.component.html
@@ -7,7 +7,7 @@
       <div
         class="user-sugestion"
         *ngFor="let item of items"
-        routerLink="/{{ item.name }}"
+        routerLink="{{ item.name }}"
       >
         <div class="user-sugestion__avatar">
           <img
