--- a/src/app/shared/components/new-post/new-post.component.html
+++ b/src/app/shared/components/new-post/new-post.component.html
@@ -1,12 +1,44 @@
 <mat-card *ngIf="hasPermission()">
   <mat-card-content>
     <form>
+      <mat-form-field>
+        <mat-label>Titulo</mat-label>
+        <input matInput type="text" name="titulo" [(ngModel)]="title" />
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Local</mat-label>
+        <input matInput type="text" name="local" [(ngModel)]="local" />
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Url</mat-label>
+        <input matInput type="text" name="url" [(ngModel)]="url" />
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Palavras Chaves</mat-label>
+        <mat-select [(ngModel)]="palavrasChaves" name="palavrasChaves" multiple>
+          <mat-option
+            *ngFor="let value of dataService.data"
+            [value]="value.value"
+          >
+            {{ value.label }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Data Publicação</mat-label>
+        <input matInput type="date" name="data" [(ngModel)]="data" />
+      </mat-form-field>
+
       <app-text-area
         #postComment
         autofocus
         [name]="'postComment'"
         [preventEnter]="false"
-        [placeholder]="'Publique seu artigo aqui!'"
+        [placeholder]="'Descrição'"
       ></app-text-area>
     </form>
     <br />
